# transistor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  build.sh  contrib.cc  implementation.cc  main.cc  run_lua_tests.sh  run_tests.sh  valgrind.supp
.github/workflows/: build-and-deploy.yml
.old/engine/: transistor-sandbox.h
.old/engine/compiler/: compiler.c
.old/engine/component/: componentdb.h  componentdef.h  included.c
.old/engine/sandbox/: sandbox.c  sandbox.h
.old/engine/util/: result.h
.old/tests/: componentdb.cc  serialization.cc
.old/ui/: common.c  main.c  resources.c
.old/ui/board/: board.c  board.h  components.h
.old/ui/gui/: gui.cc  gui.hh  mainmenu.cc  mainmenu.hh  toolbox.cc  toolbox.hh
.old2/: Makefile  TODO.md  run_lua_tests.sh
.old2/engine/engine/: componentdef.lua  sandbox.lua  wire.lua
.old2/engine/interface/: engine.hh  snapshot.hh  tests.hh
.old2/engine/simulation/: native.cc  simulation.cc
.old2/ui/: board.cc  lua_interface.cc
.old3/backend/interface/: apifunction.cc  array.cc  generate_embedded.lua  lua.hh  render.cc  render.hh  transistor.cc  transistor.hh
.old3/frontend/: main.cc  scene.cc
.old3/frontend/gui/: dialog.hh  gui.cc  gui.hh  menu.cc
backend/: .gitignore  Makefile  TODO.md  compilation.cc  compilation.hh  compilationresult.hh  engine.cc  engine.hh  native_array.hh  run_tests.tl  snapshot.cc  snapshot.hh  tests.cc  tests.hh
backend/api/: api.lua  loader.cc  runtests.cc  transistor.cc  transistor.hh
backend/engine/: api.tl  bit.d.tl  board.tl  device.tl  devicedb.tl  position.lua  run_tests.tl  sandbox.tl
backend/engine/board/: board.tl  componentdb.tl  componentdef.tl
backend/engine/components/: component.tl  componentdb.tl  componentdef.tl
backend/engine/decl/: array.d.tl
backend/engine/graphics/: context.tl  graphics.tl
backend/engine/tests/: array.tl  connected_wires.tl  pinpositions.tl  placement.tl  positions.tl
backend/engine/ui/: callback.tl  context.tl  dialog.tl  instruction.tl  render.tl  scene.tl  sceneitem.tl  ui.tl
backend/engine/util/: new_class
backend/interface/: apifunction.hh  array.cc  loader.cc  loader.hh  lua.hh  render.cc  render.hh  require.cc  runtests.cc  transistor.cc  transistor.hh
backend/sim/: simulator.c
backend/tests/: runtests.cc
backend/util/: new_class
components/: button.lua  template.lua
components/basic/: button.lua  led.lua  npn.lua  pnp.lua  vcc.lua
components/gates/: or_2i.lua
contrib/lua/: luaw.cc  luaw.hh
contrib/luaw/: luaw.cc  luaw.hh  luaw.inl
doc/: ENGINE.md  MODULES.md  NOTES.md  TODO.md
engine/: api.tl  board.lua  compiler.lua  component.lua  component_db.lua  componentdb.lua  componentdef.lua  cursor.lua  debug_.tl  decl.d.tl  device.tl  engine.lua  event.tl  filemanager.tl  geometry.lua  sandbox.lua  sandbox.tl  tlconfig.lua  transistor-sandbox.c  transistor-sandbox.h  wire.lua
engine/board/: board.c  board.tl  boardrenderer.tl  wire.tl
engine/board/geo/: dir.tl  direction.tl  orientation.tl  pinpos.tl  position.tl  positionset.tl  rect.tl
engine/compiler/: compiler.tl  connections.tl
engine/component/: component.c  component.h  componentdb.c  componentdb.h  componentdef.c  componentdef.h  included.c  included.h
engine/components/: category.tl  component.tl  componentdb.tl  componentdef.tl
engine/components/basic/: button.tl  led.lua  led.tl  npn.tl  pnp.tl  vcc.tl
engine/components/gates/: or_2i.tl
engine/decl/: simulator.d.tl
engine/decl/table/: new.d.tl
engine/engine/: board.lua  component.lua  componentdb.lua  cursor.lua  geometry.lua
engine/engine/tests/: pinpositions.lua
engine/interface/: embedded.hh  engine.cc  engine.hh  native_array.cc  snapshot.cc  snapshot.hh  tests.cc
engine/sandbox/: sandbox.c  sandbox.h
engine/simulation/: luamutex.cc  luamutex.hh  native.cc  simulation.c  simulation.cc  simulation.hh
engine/tests/: compilation.lua  compilation.tl  componentdb.lua  connected_wires.lua  connected_wires.tl  cursor.lua  pinpositions.lua  pinpositions.tl  placement.lua  placement.tl  positions.lua  positions.tl  serialization.lua  serialization.tl
engine/ui/: context.tl  dialog.tl  infobox.tl  menu.tl  render.tl  scene.tl  toolbox.tl  ui.tl
engine/util/: mock.lua  serialize.lua
frontend/: main.cc  scene.cc  scene.hh
frontend/gui/: dialog.cc  gui.cc  gui.hh  menu.cc  menu.hh
luaenv/: array.cc  array.hh  cache.cc  cache.hh  hotreload.cc  hotreload.hh  require.cc  require.hh
mappers/: engine.cc  engine.hh
mappers/in/: callback.hh  compiled_circuit.cc  compiled_circuit.hh  dialog.hh  menu.hh  render.cc  render.hh  scene.hh  scenemapper.cc  scenemapper.hh  toolbox.hh
mk/: .gitignore  genheader.lua
resources/components/: button.lua  template.lua
resources/images/: circuit.tileset.lua
simulation/: native.cc  native.hh  simulation.cc  simulation.hh
simulator/: native.hh  simulator.cc  simulator.hh
src/: board.c  board.h  boardp.c  boardp.h  components.c  components.h  gui.h  main.c  main.cc  resources.c  resources.h
src/board/: board.c  board.h  components.c  components.h
src/engine/: types.hh
src/engine/board/: board.cc  board.hh  component.cc  component.hh  wire.hh  wiremanagement.hh
src/engine/componentdb/: componentdb.cc  native.cc  (+7 more)
src/gui/: gui.c  gui.cc
src/res/: resourcemanager.cc  resourcemanager.hh
src/ui/: circuit_atlas.hh  events.hh  icons.hh  layer.hh  scene.hh  shared_res.hh  tools.hh  ui.cc  ui.hh  ui_commands.hh  ui_layer.hh  uiinterface.hh  uistate.hh
src/util/: exceptions.hh
tests/: basic.cc  compilation.cc  componentdb.cc  components.hh  connected_wires.cc  custom_ic.cc  ic.cc  pinpositions.cc  pins.cc  placement.cc  position.cc  serialization.cc  simulation.cc  tests.cc  wrapper.cc
ui/: board.cc  board.hh  common.c  common.h  lua_interface.hh  main.c  resource.cc  resource.hh  resources.cc  resources.hh  ui.cc  ui.hh
ui/board/: board.c  components.c
ui/gui/: dialog.cc  dialog.hh  gui.cc  gui.hh  infobox.cc  infobox.hh  mainmenu.cc  menu.cc  menu.hh  toolbox.cc  toolbox.hh
util/: engine.cc  engine.hh
(+75 files in other folders)
